--- a/index.html
+++ b/index.html
@@ -15,6 +15,31 @@
 
 <body>
 
+    <!--navigation bar-->
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+        <div class="container">
+
+            <!--Button-->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <a class="navbar-brand mr-auto" href="#">Ristorante Con Fusion</a>
+            <!--enable to open and close button-->
+            <div class="collapse navbar-collapse" id="Navbar">
+                 <!--mr=margin right-->
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./aboutus.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                </ul>
+                    
+            </div>
+        </div>
+    </nav>
+     <!--end of navigation-->
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -39,7 +64,7 @@
             </div>
         </div>
 
- 
+    <!--row content class gives the proper spacing-->
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
@@ -69,7 +94,7 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="./aboutus.html">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
