--- a/aboutus.html
+++ b/aboutus.html
@@ -26,7 +26,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <a class="navbar-brand mr-auto" href="./index.html"><img src="img/logo.png" height="30" width="41"></a>
+            <a class="navbar-brand mr-auto" href="./index.html"><img src="img/logo.png" height="30" width="41" alt="logo"></a>
             <!--enable to open and close button-->
             <div class="collapse navbar-collapse" id="Navbar">
                  <!--mr=margin right-->
@@ -50,7 +50,7 @@
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col-12 col-sm align-self-center">
-					<img src="img/logo.png" class="img-fluid">
+					<img src="img/logo.png" class="img-fluid" alt="logo">
                 </div>
             </div>
         </div>
