--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </button>
 
             <a class="navbar-brand mr-auto" href="#"><div class="col-12 col-sm align-self-center">
-					<img src="img/logo.png" class="img-fluid" height="30" width="41">
+					<img src="img/logo.png" class="img-fluid" height="30" width="41" alt="logo">
                 </div></a>
             <!--enable to open and close button-->
             <div class="collapse navbar-collapse" id="Navbar">
@@ -54,7 +54,7 @@
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col-12 col-sm align-self-center">
-					<img src="img/logo.png" class="img-fluid">
+					<img src="img/logo.png" class="img-fluid" alt="logo">
                 </div>
             </div>
         </div>
@@ -69,7 +69,7 @@
 				<div class="media">
 					<img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="uthappizza">
 				<div class="media-body">
-                <h2 class="mt-0">Uthappizza</h2>
+                <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
                 <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
 					</div>
 				</div>
