--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm-3 align-self-center">
+                <div class="col-12 col-sm align-self-center">
 					<img src="img/logo.png" class="img-fluid" alt="logo">
                 </div>
 				<!--Reserve Table Block Button-->
-				<div class="col-12 col-sm-3 align-self-center">
-					<a class="btn btn-warning btn-block" href="#reserve" role="button"> Reserve Table </a>
+				<div class="col-12 col-sm align-self-center">
+					<a class="btn btn-warning btn-block" href="#reserve" role="button">Reserve Table</a>
 				</div>
             </div>
         </div>
