--- a/aboutus.html
+++ b/aboutus.html
@@ -8,11 +8,15 @@
 
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+	
+	<!--build:css css/main.css-->
     <!--fontawesome and bootstrap-social-->
      <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
      <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
      <!--styles.css in css folder-->
     <link rel="stylesheet" href="css/styles.css">
+	<!--endbuild-->
+	
     <title>Ristorante Con Fusion: About Us</title>
 </head>
 
@@ -274,9 +278,14 @@
     </footer>
 
     <!--jQuery first, then Popper.js, then Bootstrap JS-->
+	
+	<!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script> 
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="js/scripts.js"></script>
+	<!--endbuild-->
+
 </body>
 
 </html>
